src/test/deca/context/valid/test_class_01.deca
// Description:
//    Teste l'utilisation
//
// Resultats:
//    TEST PASS
//
// Historique:
//    cree le 20/01/2023
class A {
    protected int x;
    float z;
    int getX() {
        return x ;
    }
    void setXZ(int x, float z) {
        this.x = x ;
        this.z = z ;
    }

    float getZ() {
        return z ;
    }
}

{
A a = new A() ;
int b = readInt();
float  f = readFloat();
a.setXZ(b, f);
println(a.getX(), a.getZ()) ;
}
